--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
 /* google font import */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
+
+/* Change font family for whole body */
 body{
     font-family: 'Poppins', sans-serif;
 }
 
+
+/* Style apply for spinner */
 #spinner {
     display: none;
 }
